--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
             android:name=".view.BatteryActivity"
             android:label="@string/title_activity_battery"
             android:theme="@style/AppTheme" />
-        <activity android:name=".view.VibratorActivity"></activity>
+        <activity android:name=".view.VibratorActivity" />
+        <activity android:name=".view.CPUActivity"></activity>
     </application>
 
 </manifest>
