--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:design:25.1.1'
+    compile 'com.github.yongjhih:mismeter:1.0.0'
     testCompile 'junit:junit:4.12'
 }
