--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,15 @@
         <activity android:name=".view.ProximityActivity" />
         <activity android:name=".view.FlashActivity" />
         <activity android:name=".view.AndroidOSActivity"></activity>
+        <receiver android:name=".view.MyReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.ACTION_POWER_CONNECTED"></action>
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED"></action>
+                <action android:name="android.intent.action.BATTERY_CHANGED"></action>
+                <action android:name="android.intent.action.BATTERY_LOW"></action>
+                <action android:name="android.intent.action.BATTERY_OKAY"></action>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
