multi-touch-canvas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,7 +77,8 @@
             android:name=".view.MapsActivity"
             android:label="@string/title_activity_maps" />
         <activity android:name=".view.NFCActivity" />
-        <activity android:name=".view.CompassActivity"></activity>
+        <activity android:name=".view.CompassActivity" />
+        <activity android:name=".view.MultiTouchActivity"></activity>
     </application>
 
 </manifest>
