--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
     <uses-permission android:name="android.permission.BATTERY_STATS" />
     <uses-permission android:name="android.permission.CAMERA" />
-
+    <uses-feature android:name="android.hardware.camera.front"/>
     <uses-feature android:name="android.hardware.camera2.full" />
 
     <uses-permission android:name="android.permission.NFC" />
@@ -98,7 +98,8 @@
         </activity>
         <activity android:name=".view.StepDetectorActivity" />
         <activity android:name=".view.StepCounterActivity" />
-        <activity android:name=".view.FingerprintActivity"></activity>
+        <activity android:name=".view.FingerprintActivity" />
+        <activity android:name=".view.CameraSecondaryActivity"></activity>
     </application>
 
 </manifest>
