--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,7 +102,8 @@
         <activity android:name=".view.FingerprintActivity" />
         <activity android:name=".view.CameraSecondaryActivity" />
         <activity android:name=".view.TemperatureActivity" />
-        <activity android:name=".view.PressureActivity"></activity>
+        <activity android:name=".view.PressureActivity" />
+        <activity android:name=".view.ECGActivity"></activity>
     </application>
 
 </manifest>
