--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,21 +42,21 @@
         <activity
             android:name=".view.ListActivity"
             android:theme="@style/AppTheme" />
-        <activity android:name=".view.CameraActivity" />
-        <activity android:name=".view.GSMActivity" />
+        <activity android:name=".view.robin.CameraActivity" />
+        <activity android:name=".view.robin.GSMActivity" />
         <activity
-            android:name=".view.BatteryActivity"
+            android:name=".view.rishabh.BatteryActivity"
             android:label="@string/title_activity_battery"
             android:theme="@style/AppTheme" />
-        <activity android:name=".view.VibratorActivity" />
-        <activity android:name=".view.CPUActivity" />
-        <activity android:name=".view.LightActivity" />
-        <activity android:name=".view.ProximityActivity" />
-        <activity android:name=".view.FlashActivity" />
-        <activity android:name=".view.AndroidOSActivity" />
-        <activity android:name=".view.MagneticActivity" />
+        <activity android:name=".view.robin.VibratorActivity" />
+        <activity android:name=".view.robin.CPUActivity" />
+        <activity android:name=".view.robin.LightActivity" />
+        <activity android:name=".view.robin.ProximityActivity" />
+        <activity android:name=".view.robin.FlashActivity" />
+        <activity android:name=".view.robin.AndroidOSActivity" />
+        <activity android:name=".view.rishabh.MagneticActivity" />
 
-        <receiver android:name=".view.MyReceiver">
+        <receiver android:name=".view.rishabh.MyReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
                 <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
@@ -85,11 +85,11 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".view.MapsActivity"
+            android:name=".view.rishabh.MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".view.NFCActivity" />
-        <activity android:name=".view.CompassActivity" />
-        <activity android:name=".view.MultiTouchActivity">
+        <activity android:name=".view.rishabh.NFCActivity" />
+        <activity android:name=".view.rishabh.CompassActivity" />
+        <activity android:name=".view.rishabh.MultiTouchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -97,13 +97,13 @@
                 <category android:name="android.intent.category.MULTIWINDOW_LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.StepDetectorActivity" />
-        <activity android:name=".view.StepCounterActivity" />
-        <activity android:name=".view.FingerprintActivity" />
-        <activity android:name=".view.CameraSecondaryActivity" />
-        <activity android:name=".view.TemperatureActivity" />
-        <activity android:name=".view.PressureActivity" />
-        <activity android:name=".view.ECGActivity"></activity>
+        <activity android:name=".view.robin.StepDetectorActivity" />
+        <activity android:name=".view.robin.StepCounterActivity" />
+        <activity android:name=".view.robin.FingerprintActivity" />
+        <activity android:name=".view.robin.CameraSecondaryActivity" />
+        <activity android:name=".view.robin.TemperatureActivity" />
+        <activity android:name=".view.robin.PressureActivity" />
+        <activity android:name=".view.robin.ECGActivity"></activity>
     </application>
 
 </manifest>
