--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -104,7 +104,8 @@
         <activity android:name=".view.robin.TemperatureActivity" />
         <activity android:name=".view.robin.PressureActivity" />
         <activity android:name=".view.robin.ECGActivity" />
-        <activity android:name=".view.robin.RadioActivity"></activity>
+        <activity android:name=".view.robin.RadioActivity" />
+        <activity android:name=".view.robin.MotionDetectorActivity"></activity>
     </application>
 
 </manifest>
