--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,7 +105,8 @@
         <activity android:name=".view.robin.PressureActivity" />
         <activity android:name=".view.robin.ECGActivity" />
         <activity android:name=".view.robin.RadioActivity" />
-        <activity android:name=".view.robin.MotionDetectorActivity"></activity>
+        <activity android:name=".view.robin.MotionDetectorActivity" />
+        <activity android:name=".view.robin.StationaryDetectorActivity"></activity>
     </application>
 
 </manifest>
