rot and hum activity start

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -107,7 +107,9 @@
         <activity android:name=".view.robin.RadioActivity" />
         <activity android:name=".view.robin.MotionDetectorActivity" />
         <activity android:name=".view.robin.StationaryDetectorActivity" />
-        <activity android:name=".view.robin.ANTActivity"></activity>
+        <activity android:name=".view.robin.ANTActivity" />
+        <activity android:name=".view.rishabh.RotationActivity" />
+        <activity android:name=".view.rishabh.HumidityActivity"></activity>
     </application>
 
 </manifest>
