--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,6 +90,10 @@
         <activity android:name=".view.rishabh.NFCActivity" />
         <activity android:name=".view.rishabh.CompassActivity" />
         <activity android:name=".view.rishabh.MultiTouchActivity">
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable">
+            </meta-data>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
