--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
 
     <uses-feature android:name="android.hardware.camera.front" />
     <uses-feature android:name="android.hardware.camera2.full" />
-    <uses-feature android:name="android.hardware.TriggerEvent"/>
-    <uses-feature android:name="android.hardware.TriggerEventListener"/>
+    <uses-feature android:name="android.hardware.TriggerEvent" />
+    <uses-feature android:name="android.hardware.TriggerEventListener" />
+
     <uses-permission android:name="android.permission.NFC" />
 
     <uses-feature android:name="android.hardware.camera" />
@@ -93,7 +94,7 @@
         <activity android:name=".view.rishabh.MultiTouchActivity">
             <meta-data
                 android:name="android.app.searchable"
-                android:resource="@xml/searchable"></meta-data>
+                android:resource="@xml/searchable" />
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -115,7 +116,8 @@
         <activity android:name=".view.robin.ANTActivity" />
         <activity android:name=".view.rishabh.RotationActivity" />
         <activity android:name=".view.rishabh.HumidityActivity" />
-        <activity android:name=".view.rishabh.BarometerActivity"></activity>
+        <activity android:name=".view.rishabh.BarometerActivity" />
+        <activity android:name=".view.rishabh.BluetoothActivity"></activity>
     </application>
 
 </manifest>
