--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,7 +90,8 @@
             android:name=".view.rishabh.MapsActivity"
             android:label="@string/title_activity_maps" />
         <activity android:name=".view.rishabh.NFCActivity" />
-        <activity android:name=".view.rishabh.CompassActivity" />
+        <activity android:name=".view.rishabh.CompassActivity"
+            android:screenOrientation="portrait"/>
         <activity android:name=".view.rishabh.MultiTouchActivity">
             <meta-data
                 android:name="android.app.searchable"
