--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
 
     <uses-feature android:name="android.hardware.camera.front" />
     <uses-feature android:name="android.hardware.camera2.full" />
+    <uses-feature android:name="android.hardware.sensor.stepdetector"/>
+    <uses-feature android:name="android.hardware.sensor.stepcounter"/>
 
     <uses-permission android:name="android.permission.NFC" />
 
