--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,9 +92,8 @@
             android:name=".view.rishabh.MapsActivity"
             android:label="@string/title_activity_maps" />
         <activity android:name=".view.rishabh.NFCActivity" />
-        <activity
-            android:name=".view.rishabh.CompassActivity"
-            android:screenOrientation="portrait" />
+        <activity android:name=".view.rishabh.CompassActivity"
+            android:screenOrientation="portrait"/>
         <activity android:name=".view.rishabh.MultiTouchActivity">
             <meta-data
                 android:name="android.app.searchable"
@@ -121,6 +120,8 @@
         <activity android:name=".view.rishabh.RotationActivity" />
         <activity android:name=".view.rishabh.HumidityActivity" />
         <activity android:name=".view.rishabh.BarometerActivity" />
+        <activity android:name=".view.rishabh.BluetoothActivity" />
+        <activity android:name=".view.rishabh.WiFiActivity"></activity>
         <activity android:name=".view.rishabh.BluetoothActivity" />
         <activity android:name=".view.robin.ScreenActivity"></activity>
     </application>
