--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,8 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
     <uses-feature android:name="android.hardware.camera.front" />
     <uses-feature android:name="android.hardware.camera2.full" />
@@ -94,8 +94,9 @@
             android:name=".view.rishabh.MapsActivity"
             android:label="@string/title_activity_maps" />
         <activity android:name=".view.rishabh.NFCActivity" />
-        <activity android:name=".view.rishabh.CompassActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".view.rishabh.CompassActivity"
+            android:screenOrientation="portrait" />
         <activity android:name=".view.rishabh.MultiTouchActivity">
             <meta-data
                 android:name="android.app.searchable"
@@ -123,9 +124,10 @@
         <activity android:name=".view.rishabh.HumidityActivity" />
         <activity android:name=".view.rishabh.BarometerActivity" />
         <activity android:name=".view.rishabh.BluetoothActivity" />
-        <activity android:name=".view.rishabh.WiFiActivity"></activity>
+        <activity android:name=".view.rishabh.WiFiActivity" />
         <activity android:name=".view.rishabh.BluetoothActivity" />
-        <activity android:name=".view.robin.ScreenActivity"></activity>
+        <activity android:name=".view.robin.ScreenActivity" />
+        <activity android:name=".view.rishabh.GyroscopeActivity"></activity>
     </application>
 
 </manifest>
