--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,7 +128,8 @@
         <activity android:name=".view.rishabh.BluetoothActivity" />
         <activity android:name=".view.robin.ScreenActivity" />
         <activity android:name=".view.rishabh.GyroscopeActivity" />
-        <activity android:name=".view.rishabh.AccelerometerTestActivity" />
+        <activity android:name=".view.rishabh.AccelerometerTestActivity"
+                  android:screenOrientation="portrait" />
         <activity android:name=".view.rishabh.AccelerometerActivity"></activity>
     </application>
 
