--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -132,7 +132,8 @@
             android:name=".view.rishabh.AccelerometerTestActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".view.rishabh.AccelerometerActivity" />
-        <activity android:name=".view.rishabh.LinearAccelerationActivity"></activity>
+        <activity android:name=".view.rishabh.LinearAccelerationActivity" />
+        <activity android:name=".view.rishabh.GravityActivity"></activity>
     </application>
 
 </manifest>
