--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -127,6 +127,7 @@
         <activity android:name=".view.rishabh.WiFiActivity" />
         <activity android:name=".view.rishabh.BluetoothActivity" />
         <activity android:name=".view.robin.ScreenActivity" />
+        <activity android:name=".view.robin.SoundActivity" />
         <activity android:name=".view.rishabh.GyroscopeActivity" />
         <activity
             android:name=".view.rishabh.AccelerometerTestActivity"
