--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
     <uses-feature android:name="android.hardware.camera.front" />
     <uses-feature android:name="android.hardware.camera2.full" />
     <uses-feature android:name="android.hardware.sensor.stepdetector" />
-
+<uses-permission android:name="android.permission.BODY_SENSORS"></uses-permission>
     <uses-permission android:name="android.permission.BATTERY_STATS" />
 
     <uses-feature android:name="android.hardware.sensor.stepcounter" />
