--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
     <uses-feature android:name="android.hardware.camera.front" />
     <uses-feature android:name="android.hardware.camera2.full" />
     <uses-feature android:name="android.hardware.sensor.stepdetector" />
-<uses-permission android:name="android.permission.BODY_SENSORS"></uses-permission>
+
+    <uses-permission android:name="android.permission.BODY_SENSORS" />
     <uses-permission android:name="android.permission.BATTERY_STATS" />
 
     <uses-feature android:name="android.hardware.sensor.stepcounter" />
@@ -146,7 +147,8 @@
         <activity android:name=".view.robin.MicrophoneActivity" />
         <activity android:name=".view.rishabh.StationaryDetectActivity" />
         <activity android:name=".view.rishabh.MotionDetectActivity" />
-        <activity android:name=".view.rishabh.HeartBeatActivity"></activity>
+        <activity android:name=".view.rishabh.HeartBeatActivity" />
+        <activity android:name=".view.rishabh.AudioVideoActivity"></activity>
     </application>
 
 </manifest>
