--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.github.yongjhih:mismeter:1.0.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.willowtreeapps.spruce:spruce-android:1.0.0'
+    compile 'com.akexorcist:RoundCornerProgressBar:2.0.3'
     compile 'com.google.android.gms:play-services:10.2.0'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
