--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,7 +103,7 @@
         <activity android:name=".view.rishabh.NFCActivity" />
         <activity
             android:name=".view.rishabh.CompassActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".view.rishabh.MultiTouchActivity">
+        <activity android:name=".view.rishabh.MultiTouchActivity" android:screenOrientation="portrait">
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
@@ -114,7 +114,7 @@
         </activity>
         <activity android:name=".view.robin.StepDetectorActivity" />
         <activity android:name=".view.robin.StepCounterActivity" />
-        <activity android:name=".view.robin.FingerprintActivity" />
+        <activity android:name=".view.robin.FingerprintActivity" android:screenOrientation="portrait"/>
         <activity android:name=".view.robin.CameraSecondaryActivity" android:screenOrientation="portrait"/>
         <activity android:name=".view.robin.TemperatureActivity" />
         <activity android:name=".view.robin.PressureActivity" />
